--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -49,9 +49,7 @@ services:
       - ./certbot/www:/var/www/certbot
       - ./certbot/log:/var/log
     # command: certonly --webroot -w /var/www --force-renewal --email haris.wm23@gmail.com -d poke-api.online --agree-tos
-    command: certonly --webroot -w /var/www/certbot --email
-      / haris.wm23@gmail.com -d www.poke-api.online
-      / --agree-tos --renew-by-default
+    command: certonly --webroot -w /var/www/certbot --email haris.wm23@gmail.com -d www.poke-api.online --agree-tos --renew-by-default
 volumes:
   dbdata6:
   appdata:
