--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,6 +13,7 @@ services:
       - .env.production
     depends_on:
       - mongo
+      - redis
     volumes:
       - appdata:/app/public
       - ./src:/app/src
@@ -27,7 +28,11 @@ services:
       - "27017:27017"
     volumes:
       - dbdata6:/data/db
-
+  redis:
+    image: redis:alpine
+    container_name: redis-client
+    ports:
+      - "6379:6379"
 volumes:
   dbdata6:
   appdata:
