--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "redis": "^4.6.7",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
   },
