--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,4 @@
 version: "3.7"
-
 services:
   rest-api:
     container_name: rest-api
@@ -25,21 +24,15 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    # ports:
+    #   - "27017:27017"
     volumes:
-      - dbdata:/data/db
-    networks:
-      - backend-network
-
+      - dbdata6:/data/db
   redis:
     image: redis:alpine
     container_name: redis-client
     ports:
       - "6379:6379"
-    networks:
-      - backend-network
 volumes:
-  dbdata:
+  dbdata6:
   appdata:
-
-networks:
-  backend-network:
